[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "A test project"
authors = ["Jeremy Reichman <jaharmi@jaharmi.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
httpx-gssapi = "^0.1.5"
keyring = "^23.5.0"
httpx = {extras = ["http2"], version = "^0.21.3"}
numpy = "^1.22.0"
pandas = "^1.3.5"
dask = "^2021.12.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
bandit = "^1.7.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
